--- a/emailreturn.html
+++ b/emailreturn.html
@@ -7,7 +7,7 @@
         <div id="top" class="header" style="background:black" border="0">
             <table id="banner" bgcolor="#003399" border="0" cellpadding="0" cellspacing="0" width="100%">
                 <a ref="Website.html">
-                    <img onClick="parent.location='Website.html'" style="cursor:pointer" src="Gif/GifFinished.gif" height="50%" align="left">
+                    <img onClick="parent.location='index.html'" style="cursor:pointer" src="Gif/GifFinished.gif" height="50%" align="left">
                     <span class="title" align="right"><i><b><br>Radical Energy & Materials</b></i></span>
                 </a>
             </table>
