--- a/Summary/Bistany.html
+++ b/Summary/Bistany.html
@@ -5,7 +5,7 @@
     </head>
     <header>
         <div id="top" class="header" style="background:black" border="0">
-            <img onClick="parent.location='../Website.html'" style="cursor:pointer" src="../Gif/GifFinished.gif" height="95%" align="left">
+            <img onClick="parent.location='../index.html'" style="cursor:pointer" src="../Gif/GifFinished.gif" height="95%" align="left">
             <span class="title"><p><i><b>Radical Energy & Materials&emsp;</b></i></p></span>
         </div>
         <div style="clear:both;"></div>
