Added Alli's Bio

--- a/Summary/Singer.html
+++ b/Summary/Singer.html
@@ -33,7 +33,18 @@
                 </h1>
                 <img src="singer.jpg" class="image">
                 <h2 align="left" style="margin:5%;margin-top:1%;">
-                    &emsp;&emsp;
+                    &emsp;&emsp;A young serial entrepreneur and graduate with a proven track record of growing and harvesting
+                    young start ups towards success. While Allison is just starting off in the early years of her
+                    career, she’s rapidly climbing the leadership ladder in Corporate America and has started a
+                    variety of entrepreneurial ventures of her own. During this time, Allison’s had experience
+                    working various roles including operations, finance, marketing, management, sales, customer
+                    solutions, and product development. The knowledge she’s gained in the real world and her
+                    Bachelor’s degree in Marketing and Management allow her to understand business needs and
+                    provide vital insights into best practices for overall business success.<br><br>
+                    &emsp;&emsp;Allison hopes to support the REM team on any business related questions or concerns, while
+                    taking on the role as Chief Financial Officer. Although Allison is still new in the nuclear medicine
+                    industry, she’s excited to learn, grow, and help the team create a solution that supports a safe
+                    and efficient way to dispose low level nuclear waste in hospitals.<br>
                 </h2>
                 <h2 align="center">
                     <a href="https://www.linkedin.com/in/allisonsinger/" target="_blank">Linkedin</a>
@@ -113,14 +124,14 @@ div.infoContainer
     display:inline-block;
     width:94%;
     border:2px solid black;
-    height:800px;
+    height:950px;
     background:gray;
     box-shadow: 0 0px 50px rgba(0,0,0,0.5);
 }
 .columnright
 {
     display:inline-block;
-    height:400px;
+    height:500px;
     float: right;
     width:2.5%;
 }
