Added Andrew's Bio

--- a/Summary/Broesder.html
+++ b/Summary/Broesder.html
@@ -33,7 +33,9 @@
                 </h1>
                 <img src="" class="image">
                 <h2 align="left" style="margin:5%;margin-top:1%;">
-                    &emsp;&emsp;
+                    &emsp;&emsp;Andrew is an undergraduate student of Nuclear Engineering at 
+                    Penn State University. He has a background in thermohydraulics and is currently 
+                    involved in research on molten salt circulation.
                 </h2>
                 <h2 align="center">
                     <a href="https://www.linkedin.com/in/andrew-broesder/" target="_blank">Linkedin</a>
