More Formatting Fixes - no sidescroll now

--- a/Summary/Bistany.html
+++ b/Summary/Bistany.html
@@ -101,6 +101,8 @@
     }
     .row
     {
+        position:relative;
+        z-index:0;
         content: "";
         display: table;
         clear: both;
@@ -148,8 +150,11 @@
     }
     footer
     {
+        position:relative;
+        right:2px;
+        width:101%;
         background:black;
-        margin:-10px;
+        margin:-7px;
         margin-top:-2px;
         height:60px;
         overflow-x:hidden;
