--- a/Summary/Holcomb.html
+++ b/Summary/Holcomb.html
@@ -31,9 +31,14 @@
                 <h1>
                     Daniel Holcomb
                 </h1>
-                <img src="" class="image">
+                <img src="holcomb.jpg" class="image">
                 <h2 align="left" style="margin:5%;margin-top:1%;">
-                    &emsp;&emsp;
+                    &emsp;&emsp;Daniel is a former submariner and reactor operator for The United State Navy. 
+                    He is currently obtaining a Bachelor of Science in nuclear engineering from The Pennsylvania 
+                    State University with a minor in physics. As the Chief Strategy Officer for REM, Daniel 
+                    streamlines current processes and plans for future REM success. His attention to detail and 
+                    compassionate motivation creates an ambitious and fast-paced work environment needed for an 
+                    up-and-coming business.
                 </h2>
                 <h2 align="center">
                     <a href="https://www.linkedin.com/in/thedannyholcomb/" target="_blank">Linkedin</a>
@@ -92,9 +97,12 @@ div.infoContainer
     z-index:0;
     margin:0px;
     top:-10%;
+    overflow-x:hidden;
 }
 .row
 {
+    position:relative;
+    z-index:0;
     content: "";
     display: table;
     clear: both;
@@ -139,11 +147,15 @@ div.infoContainer
 .body
 {
     margin-top:240px;
+    overflow-x:hidden;
 }
 footer
 {
+    position:relative;
+    width:101%;
+    right:2px;
     background:black;
-    margin:-10px;
+    margin:-7px;
     margin-top:-2px;
     height:60px;
     overflow-x:hidden;
