--- a/Summary/Smith.html
+++ b/Summary/Smith.html
@@ -99,6 +99,8 @@ div.infoContainer
 }
 .row
 {
+    position:relative;
+    z-index:0;
     content: "";
     display: table;
     clear: both;
@@ -146,8 +148,11 @@ div.infoContainer
 }
 footer
 {
+    position:relative;
+    width:101%;
+    right:2px;
     background:black;
-    margin:-10px;
+    margin:-7px;
     margin-top:-2px;
     height:60px;
     overflow-x:hidden;
