--- a/Contact.html
+++ b/Contact.html
@@ -105,11 +105,14 @@ div.infoContainer
 }
 .row
 {
+    position:relative;
+    z-index:0;
     content: "";
     display: table;
     clear: both;
     margin-top:130px;
     width:100%;
+
 }
 .columnleft
 {
@@ -176,8 +179,11 @@ div.infoContainer
 }
 footer
 {
+    position:relative;
+    width:101%;
     background:black;
-    margin:-10px;
+    margin:-7px;
+    right:2px;
     margin-top:-2px;
     height:60px;
     overflow-x:hidden;
