--- a/Directed Page.html
+++ b/Directed Page.html
@@ -41,6 +41,7 @@
                 <table class="Name" align="center">
                     <tr>
                         <td align="center">
+                            <img class="image" src="Summary/holcomb.jpg">
                             <div onClick="parent.location='Summary/Holcomb.html'" style="cursor:pointer">
                                 Daniel Holcomb<br>
                                 Chief Strategy Officer
@@ -173,6 +174,8 @@ div.infoContainer
 }
 .row
 {
+    position:relative;
+    z-index:0;
     content: "";
     display: table;
     clear: both;
@@ -227,8 +230,11 @@ div.infoContainer
 }
 footer
 {
+    position:relative;
+    width:101%;
+    right:2px;
     background:black;
-    margin:-10px;
+    margin:-7px;
     margin-top:-2px;
     height:60px;
     overflow-x:hidden;
