--- a/Product.html
+++ b/Product.html
@@ -80,6 +80,8 @@ div.infoContainer
 }
 .row
 {
+    position:relative;
+    z-index:0;
     content: "";
     display: table;
     clear: both;
@@ -112,6 +114,9 @@ div.infoContainer
 }
 footer
 {
+    position:relative;
+    width:101%;
+    right:2px;
     background:black;
     margin:-10px;
     margin-top:-2px;
