--- a/Summary/Aldeia.html
+++ b/Summary/Aldeia.html
@@ -99,6 +99,8 @@ div.infoContainer
 }
 .row
 {
+    position:relative;
+    z-index:0;
     content: "";
     display: table;
     clear: both;
@@ -146,9 +148,12 @@ div.infoContainer
 }
 footer
 {
+    position:relative;
     background:black;
-    margin:-10px;
+    margin:-7px;
     margin-top:-2px;
+    right:2px;
+    width:101%;
     height:60px;
     overflow-x:hidden;
     z-index:1;
