--- a/Summary/Balbier.html
+++ b/Summary/Balbier.html
@@ -98,6 +98,8 @@ div.infoContainer
 }
 .row
 {
+    position:relative;
+    z-index:0;
     content: "";
     display: table;
     clear: both;
@@ -145,8 +147,11 @@ div.infoContainer
 }
 footer
 {
+    position:relative;
+    right:2px;
+    width:101%;
     background:black;
-    margin:-10px;
+    margin:-7px;
     margin-top:-2px;
     height:60px;
     overflow-x:hidden;
