--- a/Summary/Broesder.html
+++ b/Summary/Broesder.html
@@ -97,6 +97,8 @@ div.infoContainer
 }
 .row
 {
+    position:relative;
+    z-index:0;
     content: "";
     display: table;
     clear: both;
@@ -144,8 +146,11 @@ div.infoContainer
 }
 footer
 {
+    position:relative;
+    width:101%;
+    right:2px;
     background:black;
-    margin:-10px;
+    margin:-7px;
     margin-top:-2px;
     height:60px;
     overflow-x:hidden;
