--- a/Summary/Nellis.html
+++ b/Summary/Nellis.html
@@ -67,6 +67,7 @@ header
     border:4px solid black;
     padding:-1px;
     margin:-3px;
+    overflow-x:hidden;
 }
 .Name
 {
@@ -91,20 +92,24 @@ div.infoContainer
     z-index:0;
     margin:0px;
     top:-10%;
+    overflow-x:hidden;
 }
 .row
 {
+    position:relative;
+    z-index:0;
     content: "";
     display: table;
     clear: both;
     margin-top:130px;
     width:100%;
+    overflow-x:hidden;
 }
 .columnleft
 {
     display:inline-block;
     height:400px;
-    width:2.5%;
+    width:2.25%;
 }
 .columnmid
 {
@@ -119,7 +124,7 @@ div.infoContainer
 {
     display:inline-block;
     height:400px;
-    width:2.5%;
+    width:2.25%;
 }
 .columnmid h1 span
 {
@@ -139,8 +144,11 @@ div.infoContainer
 }
 footer
 {
+    position:relative;
+    width:101%;
+    right:2px;
     background:black;
-    margin:-10px;
+    margin:-7px;
     margin-top:-2px;
     height:60px;
     overflow-x:hidden;
