--- a/Summary/Peretz.html
+++ b/Summary/Peretz.html
@@ -103,6 +103,8 @@
     }
     .row
     {
+        position:relative;
+        z-index:0;
         content: "";
         display: table;
         clear: both;
@@ -150,8 +152,11 @@
     }
     footer
     {
+        position:relative;
+        width:101%;
+        right:2px;
         background:black;
-        margin:-10px;
+        margin:-7px;
         margin-top:-2px;
         height:60px;
         overflow-x:hidden;
