--- a/emailreturn.html
+++ b/emailreturn.html
@@ -133,10 +133,12 @@
     }
     .row
     {
+        position:relative;
         content: "";
         display: table;
         clear: both;
         margin-top:140px;
+        z-index:0;
     }
     .body
     {
@@ -163,6 +165,9 @@
     }
     footer
     {
+        position:relative;
+        width:101%;
+        right:2px;
         background:black;
         margin:-10px;
         margin-top:-2px;
