--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@ div.infoContainer
 }
 .row
 {
+    position:relative;
+    z-index:0;
     content: "";
     display: table;
     clear: both;
@@ -110,6 +112,9 @@ div.infoContainer
 }
 footer
 {
+    position:relative;
+    width:101%;
+    right:2px;
     background:black;
     margin:-10px;
     margin-top:-2px;
