--- a/template.html
+++ b/template.html
@@ -75,6 +75,8 @@ div.infoContainer
 }
 .row
 {
+    position:relative;
+    z-index:0;
     content: "";
     display: table;
     clear: both;
@@ -108,6 +110,9 @@ div.infoContainer
 }
 footer
 {
+    position:relative;
+    width:101%;
+    right:2px;
     background:black;
     margin:-10px;
     margin-top:-2px;
