Added Banner Image

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
             <div class="columnleft">
             </div>
             <div class="columnmid" align="center">
-                <h1>&emsp;&emsp;Radical Energy & Materials</h1>
-                <img src=".jpg" style="border:4px solid black;">
+                <h1>Radical Energy & Materials</h1>
+                <h2>A Stable Company in a Radioactive World</h2>
+                <img src="MainImage.jpg" style="border:4px solid black;height:400;width:99.5%;margin-top:-10px;">
             </div>
             <div class="columnright" align="right">
             </div>
@@ -82,7 +83,7 @@ div.infoContainer
     content: "";
     display: table;
     clear: both;
-    margin-top:-170px;
+    margin-top:120px;
     width:100%;
 }
 .columnleft
