--- a/template.html
+++ b/template.html
@@ -9,7 +9,7 @@
             <span class="title"><p><i><b>Radical Energy & Materials&emsp;</b></i></p></span>
         </div>
         <div style="clear:both;"></div>
-        <div class="infoContainer" style="background:#2596be" align="right">
+        <div class="infoContainer" style="background:#81cdff" align="right">
             <table height="15%">
                 <td>
                     <p onClick="parent.location='Directed Page.html'" style="cursor:pointer;position:relative;font-size:25;"><b>About Us&emsp;</b></p>
@@ -63,7 +63,7 @@ span.title p
     margin-top:2.75%;
     right:-70%;
     font-size:+35;
-    color:#2596be;
+    color:#81cdff;
 }
 div.infoContainer
 {
@@ -122,7 +122,7 @@ footer
 }
 footer div
 {
-    background:#2596be;
+    background:#81cdff;
     height:15px;
     border:3px solid black;
     overflow-x:hidden;
