--- a/emailreturn.html
+++ b/emailreturn.html
@@ -12,7 +12,7 @@
                 </a>
             </table>
         </div>
-        <div class="infoContainer" style="background:#2596be" align="right">
+        <div class="infoContainer" style="background:#81cdff" align="right">
             <table height="15%">
                 <td>
                     <p style="cursor:pointer;position:relative;font-size:25;left:-75px"><b>About Us</b></p>
@@ -80,7 +80,7 @@
         width:12em;
         top:10px;
         font-size:+35;
-        color:#2596be;
+        color:#81cdff;
     }
     div.infoContainer
     {
@@ -177,7 +177,7 @@
     }
     footer div
     {
-        background:#2596be;
+        background:#81cdff;
         height:15px;
         border:3px solid black;
         overflow-x:hidden;
