--- a/Directed Page.html
+++ b/Directed Page.html
@@ -30,6 +30,7 @@
                 
             </div>
             <div class="columnmid" align="left">
+                <h1>&emsp;</h1>
                 <h1><span>Who We Are</span></h1>
                 <h2>
                     &emsp;&emsp;Radical Energy & Materials (REM) is a technology and software company operating through the production and
@@ -119,6 +120,7 @@
                         </td>
                     </tr>
                 </table>
+                <h1>&emsp;</h1>
             </div>
             <div class="columnright" align="right">
 
@@ -179,13 +181,13 @@ div.infoContainer
     content: "";
     display: table;
     clear: both;
-    margin-top:-26%;
+    margin-top:-5%;
     width:100%;
 }
 .columnleft
 {
     display:inline-block;
-    height:400px;
+    height:100%;
     width:2.5%;
 }
 .columnmid
@@ -200,7 +202,7 @@ div.infoContainer
 .columnright
 {
     display:inline-block;
-    height:600px;
+    height:100%;
     width:2.5%;
 }
 .columnmid h1 span
