--- a/Product.html
+++ b/Product.html
@@ -28,6 +28,7 @@
             <div class="columnleft">
             </div>
             <div class="columnmid" align="left">
+                <h1>&emsp;</h1>
                 <h1>&emsp;Our Products</h1>
                 <br><h2>&emsp;&emsp;Placeholder 1</h2>
                 <img src=".jpg" style="border:4px solid black;margin-left:10%">
