--- a/Product.html
+++ b/Product.html
@@ -110,7 +110,7 @@ div.infoContainer
 .columnleft
 {
     display:inline-block;
-    height:400px;
+    height:100%;
     width:2.5%;
 }
 .columnmid
@@ -118,14 +118,14 @@ div.infoContainer
     display:inline-block;
     width:94%;
     border:2px solid black;
-    height:900px;
+    height:800px;
     background:gray;
     box-shadow: 0 0px 50px rgba(0,0,0,0.5);
 }
 .columnright
 {
     display:inline-block;
-    height:400px;
+    height:100%;
     width:2.5%;
 }
 .body
