--- a/Directed Page.html
+++ b/Directed Page.html
@@ -233,12 +233,13 @@ div.infoContainer
 footer
 {
     position:relative;
-    width:101%;
-    right:2px;
+    width:105%;
+    right:4px;
     background:black;
     margin:-7px;
-    margin-top:-2px;
-    height:60px;
+    margin-top:-10px;
+    bottom:-2px;
+    height:55px;
     overflow-x:hidden;
     z-index:1;
 }
