--- a/Contact.html
+++ b/Contact.html
@@ -45,10 +45,11 @@
                     Email: <a href="mailto: colesmith5673@gmail.com">colesmith5673@gmail.com</a>
                 </p>
                 <br><br><br>
-                <h2>&emsp;&emsp;Join our E-mail List</h2>
-                <form class="input" id="Email Input" action="emailcollect.php" method="post">
-                    <input class="textbox" type="text" name="eml"><br>
-                    <input id="Submit" type="submit" value="Submit" style="position:relative;top:3px;right:-7px;">
+                <h2 style="margin:1%;">&emsp;&emsp;Join our E-mail List</h2>
+                <form action="https://formspree.io/f/xrgdekvj" method="POST">
+                    <input class='textbox' type="email" style='position:relative;margin: left 70px;' name="email">
+
+                    <button type="submit" style="margin-left:1%">Send</button>
                 </form>
             </div>
             <div class="columnright" align="right">
