--- a/Directed Page.html
+++ b/Directed Page.html
@@ -77,7 +77,7 @@
                             <img src="Summary/singer.jpg" class="image">
                             <div  onClick="parent.location='Summary/Singer.html'" style="cursor:pointer">
                                 Alli Singer<br>
-                                Executive Advisor
+                                Chief Financial Officer
                             </div>
                         </td>
                         <td align="center">
