--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="columnleft">
             </div>
             <div class="columnmid" align="center">
+                <h1>&emsp;</h1>
                 <h1>Radical Energy & Materials</h1>
                 <h2>A Stable Company in a Radioactive World</h2>
                 <img src="MainImage.jpg" style="border:4px solid black;height:400;width:99.5%;margin-top:-10px;">
