--- a/Directed Page.html
+++ b/Directed Page.html
@@ -1,131 +1,132 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Radical Energy & Materials</title>
         <link rel="icon" href="LogoRounded.png"/>
+        <link rel="stylesheet" href="style.css">
+        <script defer src="app.js"></script>
     </head>
     <header>
         <div id="top" class="header" style="background:black" border="0">
-            <img onClick="parent.location='index.html'" style="cursor:pointer" src="Gif/GifFinished.gif" height="95%" align="left">
+            <img onClick="parent.location='index.html'" style="cursor:pointer" src="Gif/GifFinished.gif" width="130px" align="left">
             <span class="title"><p><i><b>Radical Energy & Materials&emsp;</b></i></p></span>
         </div>
         <div style="clear:both;"></div>
         <div class="infoContainer" style="background:#81cdff" align="right">
-            <table height="15%">
+            <table height="15%" style="position:relative;top:-7px;border-spacing:20px 0px;">
                 <td>
-                    <p onClick="parent.location='Directed Page.html'" style="cursor:pointer;position:relative;font-size:25;"><b>About Us&emsp;</b></p>
+                    <p class="link" onClick="parent.location='Directed Page.html'"><b>About Us&emsp;</b></p>
+                    <div class="underbar"></div> 
                 </td>
                 <td>
-                    <p onClick="parent.location='Product.html'" style="cursor:pointer;position:relative;font-size:25;"><b>Products&emsp;</b></p>
+                    <p class="link" onClick="parent.location='Product.html'"><b>Products&emsp;</b></p>
+                    <div class="underbar"></div> 
                 </td>
                 <td>
-                    <p onClick="parent.location='Contact.html'" style="cursor:pointer;position:relative;font-size:25;"><b>Contact Us&emsp;</b></p>
+                    <p class="linkcont" onClick="parent.location='Contact.html'"><b>Contact Us&emsp;</b></p>
+                    <div class="underbar"></div> 
                 </td>
-            </table>         
+                <td>
+                    <p>&emsp;&emsp;</p>
+                </td>
+            </table>        
         </div>
     </header>
-    <body style="background:silver">
-        <div style="clear:both;padding-top:10%;min-width:100%"></div>
-        <div class="row">
-            <div class="columnleft">
-                
-            </div>
-            <div class="columnmid" align="left">
-                <h1>&emsp;</h1>
-                <h1><span>Who We Are</span></h1>
-                <h2>
-                    &emsp;&emsp;Radical Energy & Materials (REM) is a technology and software company operating through the production and
-                    provision of products and services geared towards further commercializing the nuclear industry. REM currently operates in
-                    automatic cataloging and storage of nuclear waste to improve the use of nuclear medicine in hospitals. Our goal is to give
-                    hospitals the opportunity to provide better treatment and help the lives of more people.
-                </h2>
+    <body>
+        <section>
+            <h1>&emsp;</h1>
+            <br><br><br><br>
+            <h1 class="hidden shift"><span>Who We Are</span></h1>
+            <h2 class="hidden shift">
+                &emsp;&emsp;Radical Energy & Materials (REM)
+            </h2>
+            <br>
+            <table class="Name" align="center">
+                <tr>
+                    <td align="center" class="hidden shift">
+                        <img class="image" src="Summary/holcomb.jpg">
+                        <div onClick="parent.location='Summary/Holcomb.html'" style="cursor:pointer">
+                            Daniel Holcomb<br>
+                            Chief Strategy Officer
+                        </div>
+                    </td>
+                    <td align="center" class="hidden shift">
+                        <img class="image" src="Summary/smith.jpg">
+                        <div onClick="parent.location='Summary/Smith.html'" style="cursor:pointer">
+                            Coleman Smith<br>
+                            Chief Executive Officer
+                        </div>
+                    </td>
+                    <td align="center" class="hidden shift" style="padding-left:10px;">
+                        <img class="image" src="Summary/bistany.jpg">
+                        <div onClick="parent.location='Summary/Bistany.html'" style="cursor:pointer">
+                            Sean Bistany<br>
+                            Chief Operations Officer
+                        </div>
+                    </td>
+                </tr>
                 <br>
-                <table class="Name" align="center">
-                    <tr>
-                        <td align="center">
-                            <img class="image" src="Summary/holcomb.jpg">
-                            <div onClick="parent.location='Summary/Holcomb.html'" style="cursor:pointer">
-                                Daniel Holcomb<br>
-                                Chief Strategy Officer
-                            </div>
-                        </td>
-                        <td align="center">
-                            <img class="image" src="Summary/smith.jpg">
-                            <div onClick="parent.location='Summary/Smith.html'" style="cursor:pointer">
-                                Coleman Smith<br>
-                                Chief Executive Officer
-                            </div>
-                        </td>
-                        <td align="center">
-                            <img class="image" src="Summary/bistany.jpg">
-                            <div onClick="parent.location='Summary/Bistany.html'" style="cursor:pointer">
-                                Sean Bistany<br>
-                                Chief Operations Officer
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td align="center">
+                <tr>
+                    <td colspan="3">
+                        <table style="position:relative;left:120px;">
+                            <tr align="center">
+                                <td class="hidden shift" style="position:relative;right:5px;">
+                                    <br>
+                                    <img class="image" src="Summary/peretz.jpg">
+                                    <div  onClick="parent.location='Summary/Peretz.html'" style="cursor:pointer">
+                                        James Peretz<br>
+                                        Chief Marketing Officer
+                                    </div>
+                                </td>
+                                <td class="hidden shift" style="position:relative;left:5px;">
+                                    <br>
+                                    <img src="Summary/singer.jpg" class="image">
+                                    <div  onClick="parent.location='Summary/Singer.html'" style="cursor:pointer">
+                                        Alli Singer<br>
+                                        Chief Financial Officer
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+                <br>
+                <tr>
+                    <td align="Center" class="hidden shift">
+                        <br>
+                        <img class="image" src="Summary/balbier.jpg">
+                        <div  onClick="parent.location='Summary/Balbier.html'" style="cursor:pointer">
+                            Chris Balbier<br>
+                            Chief Product Development
                             <br>
-                            <img class="image" src="Summary/peretz.jpg">
-                            <div  onClick="parent.location='Summary/Peretz.html'" style="cursor:pointer">
-                                James Peretz<br>
-                                Chief Marketing Officer
-                            </div>
-                        </td>
-                        <td align="Center">
+                            &emsp;
+                        </div>
+                    </td>
+                    <td align="Center" class="hidden shift">
+                        <br>
+                        <img class="image" src="Summary/aldeia.jpg">
+                        <div  onClick="parent.location='Summary/Aldeia.html'" style="cursor:pointer">
+                            Luiz Aldeia<br>
+                            Chief Design Engineer
                             <br>
-                            <img src="Summary/singer.jpg" class="image">
-                            <div  onClick="parent.location='Summary/Singer.html'" style="cursor:pointer">
-                                Alli Singer<br>
-                                Chief Financial Officer
-                            </div>
-                        </td>
-                        <td align="center">
-                            <br>
-                            <div onClick="parent.location='Summary/Broesder.html'" style="cursor:pointer">
-                                Andrew Broesder<br>
-                                Technical Engineer
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td align="Center">
-                            <br>
-                            <img class="image" src="Summary/balbier.jpg">
-                            <div  onClick="parent.location='Summary/Balbier.html'" style="cursor:pointer">
-                                Chris Balbier<br>
-                                Chief Product Development
-                                <br>
-                                &emsp;
-                            </div>
-                        </td>
-                        <td align="Center">
-                            <br>
-                            <img class="image" src="Summary/aldeia.jpg">
-                            <div  onClick="parent.location='Summary/Aldeia.html'" style="cursor:pointer">
-                                Luiz Aldeia<br>
-                                Chief Design Engineer
-                                <br>
-                                &emsp;
-                            </div>
-                        </td>
-                        <td align="Center">
-                            <br>
-                            <img class="image" src="Summary/nellis.jfif">
-                            <div  onClick="parent.location='Summary/Nellis.html'" style="cursor:pointer">
-                                Alex Nellis<br>
-                                Chief Programmer<br>
-                                &emsp;
-                            </div>
-                        </td>
-                    </tr>
-                </table>
-                <h1>&emsp;</h1>
-            </div>
-            <div class="columnright" align="right">
-
-            </div>
-        </div>
+                            &emsp;
+                        </div>
+                    </td>
+                    <td align="Center" class="hidden shift" style="padding-left:10px;">
+                        <br>
+                        <img class="image" src="Summary/nellis.jfif">
+                        <div  onClick="parent.location='Summary/Nellis.html'" style="cursor:pointer">
+                            Alex Nellis<br>
+                            Chief Programmer<br>
+                            &emsp;
+                        </div>
+                    </td>
+                </tr>
+            </table>
+            <h1>&emsp;</h1>
+        </section>
+        <br>
+        <br>
     </body>
     <footer>
         <div>
@@ -133,120 +134,3 @@
         </div>
     </footer>
 </html>
-
-<style>
-html
-{
-    overflow-x:hidden;
-}
-header
-{
-    margin:-10px;
-    height:130px;
-    position:fixed;
-    top:0;
-    width:100%;
-    margin-bottom:0px;
-    z-index:1;
-    background-color: black;
-}
-.Name
-{
-    position:inline-block;
-    font-size:+20;
-    width:85%;
-    font-weight:bold;
-}
-span.title p
-{
-    float:right;
-    text-align:right;
-    margin-top:2.75%;
-    right:-70%;
-    font-size:+35;
-    color:#81cdff;
-}
-div.infoContainer
-{
-    position:relative;
-    border:3px solid black;
-    z-index:0;
-    margin:0px;
-    top:-10%;
-}
-.row
-{
-    position:relative;
-    z-index:0;
-    content: "";
-    display: table;
-    clear: both;
-    margin-top:-5%;
-    width:100%;
-}
-.columnleft
-{
-    display:inline-block;
-    height:100%;
-    width:2.5%;
-}
-.columnmid
-{
-    display:inline-block;
-    width:94%;
-    border:2px solid black;
-    height:100%;
-    background:white;
-    box-shadow: 0 0px 50px rgba(0,0,0,0.5);
-}
-.columnright
-{
-    display:inline-block;
-    height:100%;
-    width:2.5%;
-}
-.columnmid h1 span
-{
-    position:relative;
-    right:-60px;
-}
-.columnmid h2
-{
-    position:relative;
-    word-break:break-word;
-    margin-left:10%;
-    margin-right:10%;
-}
-.body
-{
-    margin-top:240px;
-}
-.image
-{
-    display:block;
-    width:200px;
-    height:200px;
-    border:4px solid black;
-    padding:-1px;
-    margin:-3px;
-}
-footer
-{
-    position:relative;
-    width:105%;
-    right:4px;
-    background:black;
-    margin:-7px;
-    margin-top:-10px;
-    bottom:-2px;
-    height:55px;
-    overflow-x:hidden;
-    z-index:1;
-}
-footer div
-{
-    background:#81cdff;
-    height:15px;
-    border:3px solid black;
-}
-</style>
