--- a/index.html
+++ b/index.html
@@ -1,40 +1,44 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Radical Energy & Materials</title>
         <link rel="icon" href="LogoRounded.png"/>
+        <link rel="stylesheet" href="style.css">
+        <script defer src="app.js"></script>
     </head>
-    <header>
+    <header style="z-index:2;">
         <div id="top" class="header" style="background:black" border="0">
-            <img onClick="parent.location='index.html'" style="cursor:pointer" src="Gif/GifFinished.gif" height="95%" align="left">
+            <img onClick="parent.location='index.html'" style="cursor:pointer" src="Gif/GifFinished.gif" width="130px" align="left">
             <span class="title"><p><i><b>Radical Energy & Materials&emsp;</b></i></p></span>
         </div>
         <div style="clear:both;"></div>
-        <div class="infoContainer" style="background:#81cdff" align="right">
-            <table height="15%">
+        <div class="infoContainer" style="position:relative;background:#81cdff;" align="right">
+            <table height="15%" style="position:relative;top:-7px;border-spacing:20px 0px;">
                 <td>
-                    <p onClick="parent.location='Directed Page.html'" style="cursor:pointer;position:relative;font-size:25;"><b>About Us&emsp;</b></p>
+                    <p class="link" onClick="parent.location='Directed Page.html'"><b>About Us&emsp;</b></p>
+                    <div class="underbar"></div> 
                 </td>
                 <td>
-                    <p onClick="parent.location='Product.html'" style="cursor:pointer;position:relative;font-size:25;"><b>Products&emsp;</b></p>
+                    <p class="link" onClick="parent.location='Product.html'"><b>Products&emsp;</b></p>
+                    <div class="underbar"></div> 
                 </td>
                 <td>
-                    <p onClick="parent.location='Contact.html'" style="cursor:pointer;position:relative;font-size:25;"><b>Contact Us&emsp;</b></p>
+                    <p class="linkcont" onClick="parent.location='Contact.html'"><b>Contact Us&emsp;</b></p>
+                    <div class="underbar"></div> 
                 </td>
-            </table>         
+                <td>
+                    <p>&emsp;&emsp;</p>
+                </td>
+            </table>        
         </div>
     </header>
-    <body style="background-color:silver">
-        <div class="row">
-            <div class="columnleft">
-            </div>
-            <div class="columnmid" align="center">
-                <h1>&emsp;</h1>
-                <h1>Radical Energy & Materials</h1>
-                <h2>A Stable Company in a Radioactive World</h2>
-                <img src="MainImage.jpg" style="border:4px solid black;height:400;width:99.5%;margin-top:-10px;">
-            </div>
-            <div class="columnright" align="right">
-            </div>
+    <body>
+        <section>
+            <h1 class="hidden shift" style="position:relative;z-index:1;">Radical Energy & Materials</h1>
+            <p class="hidden shift" style="position:relative;z-index:1;">A Stable Company in a Radioactive World</p>
+        </section>
+        <div>
+            <img src="MainImage.jpg" style="position:relative;width:100%;top:-550px;z-index:0;">
         </div>
     </body>
     <footer>
@@ -43,92 +47,3 @@
         </div>
     </footer>
 </html>
-
-<style>
-html
-{
-    overflow-x:hidden;
-}
-header
-{
-    margin:-10px;
-    height:130px;
-    position:fixed;
-    top:0;
-    width:100%;
-    margin-bottom:0px;
-    z-index:1;
-    background-color: black;
-}
-span.title p
-{
-    float:right;
-    text-align:right;
-    margin-top:2.75%;
-    right:-70%;
-    font-size:+35;
-    color:#81cdff;
-}
-div.infoContainer
-{
-    position:relative;
-    border:3px solid black;
-    z-index:0;
-    margin:0px;
-    top:-10%;
-}
-.row
-{
-    position:relative;
-    z-index:0;
-    content: "";
-    display: table;
-    clear: both;
-    margin-top:120px;
-    width:100%;
-}
-.columnleft
-{
-    display:inline-block;
-    height:400px;
-    width:2.5%;
-}
-.columnmid
-{
-    display:inline-block;
-    width:94%;
-    border:2px solid black;
-    height:800px;
-    background:gray;
-    box-shadow: 0 0px 50px rgba(0,0,0,0.5);
-}
-.columnright
-{
-    display:inline-block;
-    height:400px;
-    width:2.5%;
-}
-.body
-{
-    margin-top:240px;
-}
-footer
-{
-    position:relative;
-    width:101%;
-    right:2px;
-    background:black;
-    margin:-10px;
-    margin-top:-2px;
-    height:60px;
-    overflow-x:hidden;
-    z-index:1;
-}
-footer div
-{
-    background:#81cdff;
-    height:15px;
-    border:3px solid black;
-    overflow-x:hidden;
-}
-</style>
