--- a/template.html
+++ b/template.html
@@ -3,8 +3,8 @@
         <title>Radical Energy & Materials</title>
         <link rel="icon" href="LogoRounded.png"/>
     </head>
-    <header>
-        <div id="top" class="header" style="background:black" border="0">
+    <header style="background-color: #131316;width:101%">
+        <div id="top" class="header" style="background:#131316" border="0">
             <img onClick="parent.location='index.html'" style="cursor:pointer" src="Gif/GifFinished.gif" height="95%" align="left">
             <span class="title"><p><i><b>Radical Energy & Materials&emsp;</b></i></p></span>
         </div>
