--- a/template-new.html
+++ b/template-new.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="style.css">
         <script defer src="app.js"></script>
     </head>
-    <header style="z-index:2;">
-        <div id="top" class="header" style="background:black" border="0">
+    <header style="z-index:2;background-color:#131316">
+        <div id="top" class="header" border="0">
             <img onClick="parent.location='index.html'" style="cursor:pointer" src="Gif/GifFinished.gif" width="130px" align="left">
             <span class="title"><p><i><b>Radical Energy & Materials&emsp;</b></i></p></span>
         </div>
