--- a/Product.html
+++ b/Product.html
@@ -1,58 +1,61 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Radical Energy & Materials</title>
         <link rel="icon" href="LogoRounded.png"/>
+        <link rel="stylesheet" href="style.css">
+        <script defer src="app.js"></script>
     </head>
-    <header style="background-color: #131316;width:101%">
-        <div id="top" class="header" style="background:#131316" border="0">
-            <img onClick="parent.location='index.html'" style="cursor:pointer" src="Gif/GifFinished.gif" height="95%" align="left">
+    <header style="z-index:2;background-color:#131316">
+        <div id="top" class="header" border="0">
+            <img onClick="parent.location='index.html'" style="cursor:pointer" src="Gif/GifFinished.gif" width="130px" align="left">
             <span class="title"><p><i><b>Radical Energy & Materials&emsp;</b></i></p></span>
         </div>
         <div style="clear:both;"></div>
-        <div class="infoContainer" style="background:#81cdff" align="right">
-            <table height="15%">
+        <div class="infoContainer" style="position:relative;background:#81cdff;" align="right">
+            <table height="15%" style="position:relative;top:-7px;border-spacing:20px 0px;">
                 <td>
-                    <p onClick="parent.location='Directed Page.html'" style="cursor:pointer;position:relative;font-size:25;"><b>About Us&emsp;</b></p>
+                    <p class="link" onClick="parent.location='Directed Page.html'"><b>About Us&emsp;</b></p>
+                    <div class="underbar"></div> 
                 </td>
                 <td>
-                    <p onClick="parent.location='Product.html'" style="cursor:pointer;position:relative;font-size:25;"><b>Products&emsp;</b></p>
+                    <p class="link" onClick="parent.location='Product.html'"><b>Products&emsp;</b></p>
+                    <div class="underbar"></div> 
                 </td>
                 <td>
-                    <p onClick="parent.location='Contact.html'" style="cursor:pointer;position:relative;font-size:25;"><b>Contact Us&emsp;</b></p>
+                    <p class="linkcont" onClick="parent.location='Contact.html'"><b>Contact Us&emsp;</b></p>
+                    <div class="underbar"></div> 
                 </td>
-            </table>         
+                <td>
+                    <p>&emsp;&emsp;</p>
+                </td>
+            </table>        
         </div>
     </header>
-    <body style="background-color:silver">
-        <div class="row">
-            <div class="columnleft">
-            </div>
-            <div class="columnmid" align="left">
-                <h1>&emsp;</h1>
-                <h1>&emsp;Our Products</h1>
-                <br><h2>&emsp;&emsp;Placeholder 1</h2>
-                <img src=".jpg" style="border:4px solid black;margin-left:10%">
-                <br><h2>&emsp;&emsp;Placeholder 2</h2>
-                <img src=".jpg" style="border:4px solid black;margin-left:10%">
+    <body>
+        <div style="margin:8%;">
+            <h1>&emsp;</h1>
+            <h1>&emsp;Our Products</h1>
+            <br><h2>&emsp;&emsp;Placeholder 1</h2>
+            <img src=".jpg" style="border:4px solid black;margin-left:10%">
+            <br><h2>&emsp;&emsp;Placeholder 2</h2>
+            <img src=".jpg" style="border:4px solid black;margin-left:10%">
+            <br>
+            <form action="https://formspree.io/f/xrgdekvj" method="POST">
+                <h2 style="margin-left:2%;margin-bottom:-0.0%"><b>Preorder Now!</b></h2> 
                 <br>
-                <form action="https://formspree.io/f/xrgdekvj" method="POST">
-                    <h2 style="margin-left:2%;margin-bottom:-0.0%"><b>Preorder Now!</b></h2> 
-                    <br>
-                    <label style='margin-left:3%'>
-                        Your email:
-                    </label>
-                    <br>
-                    <input type="email" style='margin-left:3%' name="email">
-                    <br>
-                    <select name="os0" style="margin-left:3%"> <option value="Select Type">-- Select Type --</option> 
-                        <option value="Scanner">Scanner</option> 
-                        <option value="Cart">Cart</option> 
-                    </select> <br/>
-                    <button type="submit" style="margin-left:3%">Send</button>
-                </form>
-            </div>
-            <div class="columnright" align="right">
-            </div>
+                <label style='margin-left:3%'>
+                    Your email:
+                </label>
+                <br>
+                <input type="email" style='margin-left:3%' name="email">
+                <br>
+                <select name="os0" style="margin-left:3%"> <option value="Select Type">-- Select Type --</option> 
+                    <option value="Scanner">Scanner</option> 
+                    <option value="Cart">Cart</option> 
+                </select> <br/>
+                <button type="submit" style="margin-left:3%">Send</button>
+            </form>
         </div>
     </body>
     <footer>
@@ -61,92 +64,3 @@
         </div>
     </footer>
 </html>
-
-<style>
-html
-{
-    overflow-x:hidden;
-}
-header
-{
-    margin:-10px;
-    height:130px;
-    position:fixed;
-    top:0;
-    width:100%;
-    margin-bottom:0px;
-    z-index:1;
-    background-color: black;
-}
-span.title p
-{
-    float:right;
-    text-align:right;
-    margin-top:2.75%;
-    right:-70%;
-    font-size:+35;
-    color:#81cdff;
-}
-div.infoContainer
-{
-    position:relative;
-    border:3px solid black;
-    z-index:0;
-    margin:0px;
-    top:-10%;
-}
-.row
-{
-    position:relative;
-    z-index:0;
-    content: "";
-    display: table;
-    clear: both;
-    width:100%;
-    margin-top:85px;
-}
-.columnleft
-{
-    display:inline-block;
-    height:100%;
-    width:2.5%;
-}
-.columnmid
-{
-    display:inline-block;
-    width:94%;
-    border:2px solid black;
-    height:800px;
-    background:gray;
-    box-shadow: 0 0px 50px rgba(0,0,0,0.5);
-}
-.columnright
-{
-    display:inline-block;
-    height:100%;
-    width:2.5%;
-}
-.body
-{
-    margin-top:240px;
-}
-footer
-{
-    position:relative;
-    width:110%;
-    right:2px;
-    background:black;
-    margin:-10px;
-    margin-top:-2px;
-    height:60px;
-    overflow-x:hidden;
-    z-index:1;
-}
-footer div
-{
-    background:#81cdff;
-    height:15px;
-    border:3px solid black;
-    overflow-x:hidden;
-}
-</style>
