--- a/Summary/Smith.html
+++ b/Summary/Smith.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Radical Energy & Materials</title>
+        <title>Radical Energy and Materials</title>
         <link rel="icon" href="LogoRounded.png"/>
         <link rel="stylesheet" href="../style.css">
         <script defer src="app.js"></script>
@@ -9,7 +9,7 @@
     <header style="z-index:2;background-color:#131316">
         <div id="top" class="header" border="0">
             <img onClick="parent.location='../index.html'" style="cursor:pointer" src="../Gif/GifFinished.gif" width="130px" align="left">
-            <span class="title"><p><i><b>Radical Energy & Materials&emsp;</b></i></p></span>
+            <span class="title"><p><i><b>Radical Energy and Materials&emsp;</b></i></p></span>
         </div>
         <div style="clear:both;"></div>
         <div class="infoContainer" style="position:relative;background:#81cdff;" align="right">
