--- a/Contact.html
+++ b/Contact.html
@@ -41,7 +41,11 @@
                 <br>
                 Address second Line
                 <br>
-                Website:
+                <a href="https://radicalenergyandmaterials.tech">radicalenergyandmaterials.tech</a>
+            </p>
+            <h2>&emsp;&emsp;Connect with Us!</h2>
+            <p>
+                <a href="https://www.linkedin.com/company/radical-energy-materials/">LinkedIn</a>
             </p>
             <h2>&emsp;&emsp;CEO</h2>
             <p>
@@ -59,6 +63,7 @@
 
                 <button type="submit" style="margin-left:1%">Send</button>
             </form>
+           
         </div>
     </body>
     <footer>
