--- a/Contact.html
+++ b/Contact.html
@@ -47,6 +47,9 @@
             <p>
                 <a href="https://www.linkedin.com/company/radical-energy-materials/">LinkedIn</a>
             </p>
+            <p>
+                <a href="https://www.instagram.com/radical_energy_and_materials">Instagram</a>
+            </p>
             <h2>&emsp;&emsp;CEO</h2>
             <p>
                 <a onClick="parent.location='Summary/Smith.html'" style="cursor:pointer;">Coleman Smith</a>
