--- a/Contact.html
+++ b/Contact.html
@@ -35,7 +35,8 @@
     <body>
         <div style="position:relative;left:10%;margin:10%;">
             <br>
-            <h1>&emsp;General Information</h1>
+            <h1 class="hidden shift">&emsp;General Information</h1>
+            <div class="hidden shift">
             <p>
                 Address
                 <br>
@@ -43,14 +44,18 @@
                 <br>
                 <a href="https://radicalenergyandmaterials.tech">radicalenergyandmaterials.tech</a>
             </p>
-            <h2>&emsp;&emsp;Connect with Us!</h2>
+            </div>
+            <h2 class="hidden shift">&emsp;&emsp;Connect with Us!</h2>
+            <div class="hidden shift">
             <p>
                 <a href="https://www.linkedin.com/company/radical-energy-materials/">LinkedIn</a>
             </p>
             <p>
                 <a href="https://www.instagram.com/radical_energy_and_materials">Instagram</a>
             </p>
-            <h2>&emsp;&emsp;CEO</h2>
+            </div>
+            <h2 class="hidden shift">&emsp;&emsp;CEO</h2>
+            <div class="hidden shift">
             <p>
                 <a onClick="parent.location='Summary/Smith.html'" style="cursor:pointer;">Coleman Smith</a>
                 <br>
@@ -58,15 +63,17 @@
                 <br>
                 Email: <a href="mailto: colesmith5673@gmail.com">colesmith5673@gmail.com</a>
             </p>
+            </div>
             <br><br><br>
-            <h2 style="margin:0%;">&emsp;&emsp;Join our E-mail List</h2>
+            <h2 class="hidden shift" style="margin:0%;">&emsp;&emsp;Join our E-mail List</h2>
             <br>
+            <div class="hidden shift">
             <form action="https://formspree.io/f/xrgdekvj" method="POST">
                 <input class='textbox' type="email" style='position:relative;margin-left:0%;' name="email">
 
                 <button type="submit" style="margin-left:1%">Send</button>
             </form>
-           
+            </div>
         </div>
     </body>
     <footer>
