--- a/Directed Page.html
+++ b/Directed Page.html
@@ -6,13 +6,13 @@
         <link rel="stylesheet" href="style.css">
         <script defer src="app.js"></script>
     </head>
-    <header style="background-color: #131316;width:101%">
+    <header style="z-index:2;background-color: #131316;width:101%">
         <div id="top" class="header" style="background:#131316" border="0">
             <img onClick="parent.location='index.html'" style="cursor:pointer" src="Gif/GifFinished.gif" width="130px" align="left">
             <span class="title"><p><i><b>Radical Energy and Materials&emsp;</b></i></p></span>
         </div>
         <div style="clear:both;"></div>
-        <div class="infoContainer" style="background:#81cdff" align="right">
+        <div class="infoContainer" style="position:relative;background:#81cdff" align="right">
             <table height="15%" style="position:relative;top:-7px;border-spacing:20px 0px;">
                 <td>
                     <p class="link" onClick="parent.location='Directed Page.html'"><b>About Us&emsp;</b></p>
