--- a/Product.html
+++ b/Product.html
@@ -35,12 +35,17 @@
     <body>
         <div style="margin:8%;">
             <h1>&emsp;</h1>
-            <h1>&emsp;Our Products</h1>
+            <h1 class="hidden shift">&emsp;Our Products</h1>
+            <div class="hidden shift">
             <br><h2>&emsp;&emsp;Placeholder 1</h2>
             <img src=".jpg" style="border:4px solid black;margin-left:10%">
+            </div>
+            <div class="hidden shift">
             <br><h2>&emsp;&emsp;Placeholder 2</h2>
             <img src=".jpg" style="border:4px solid black;margin-left:10%">
+            </div>
             <br>
+            <div class="hidden shift">
             <form action="https://formspree.io/f/xrgdekvj" method="POST">
                 <h2 style="margin-left:2%;margin-bottom:-0.0%"><b>Preorder Now!</b></h2> 
                 <br>
@@ -56,6 +61,7 @@
                 </select> <br/>
                 <button type="submit" style="margin-left:3%">Send</button>
             </form>
+            </div>
         </div>
     </body>
     <footer>
