--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p class="hidden shift" style="position:relative;z-index:1;">A Stable Company in a Radioactive World</p>
         </section>
         <div>
-            <img src=".jpg" style="position:relative;width:100%;top:-550px;z-index:0;">
+            <img src="MainImage.jpg" style="position:relative;width:100%;top:-550px;z-index:0;">
         </div>
     </body>
     <footer>
