--- a/Directed Page.html
+++ b/Directed Page.html
@@ -50,14 +50,14 @@
                             Chief Strategy Officer
                         </div>
                     </td>
-                    <td align="center" class="hidden shift" style="padding-left:15px;">
+                    <td align="center" class="hidden shift" style="padding-left:10px;">
                         <img class="image" src="Summary/smith.jpg">
                         <div onClick="parent.location='Summary/Smith.html'" style="cursor:pointer">
                             Coleman Smith<br>
                             Chief Executive Officer
                         </div>
                     </td>
-                    <td align="center" class="hidden shift" style="padding-left:15px;">
+                    <td align="center" class="hidden shift" style="padding-left:10px;">
                         <img class="image" src="Summary/bistany.jpg">
                         <div onClick="parent.location='Summary/Bistany.html'" style="cursor:pointer">
                             Sean Bistany<br>
@@ -66,8 +66,8 @@
                     </td>
                 </tr>
                 <br>
-                <tr align="center">
-                    <td class="hidden shift">
+                <tr>
+                    <td align="Center" class="hidden shift" style="position:relative;">
                         <br>
                         <img class="image" src="Summary/peretz.jpg">
                         <div  onClick="parent.location='Summary/Peretz.html'" style="cursor:pointer">
@@ -75,7 +75,7 @@
                             Chief Marketing Officer
                         </div>
                     </td>
-                    <td class="hidden shift" style="padding-left:15px;">
+                    <td align="Center" class="hidden shift" style="position:relative;left:10px;">
                         <br>
                         <img src="Summary/singer.jpg" class="image">
                         <div  onClick="parent.location='Summary/Singer.html'" style="cursor:pointer">
@@ -83,32 +83,43 @@
                             Chief Financial Officer
                         </div>
                     </td>
-                    <td class="hidden shift" style="padding-left:15px;">
-                        <br>
-                        <img class="image" src="Summary/aldeia.jpg">
-                        <div  onClick="parent.location='Summary/Aldeia.html'" style="cursor:pointer">
-                            Luiz Aldeia<br>
-                            Chief Design Engineer
-                            <br>
-                        </div>
-                    </td>
-                </tr>
-                <br>
-                <tr>
-                    <td>
-                        <br>
-                    </td>                    
+                    
                     <td align="Center" class="hidden shift" style="padding-left:10px;">
                         <br>
                         <img class="image" src="Summary/nellis.jfif">
                         <div  onClick="parent.location='Summary/Nellis.html'" style="cursor:pointer">
                             Alex Nellis<br>
-                            Chief Programmer<br>
-                            &emsp;
+                            Chief Technical Officer
                         </div>
                     </td>
-                    <td>
-                        <br>
+                </tr>
+                <br>
+                <tr>
+                    <td colspan="3">
+                        <table style="position:relative;left:90px;">
+                            <tr align="center">
+                                <td align="Center" class="hidden shift">
+                                    <br>
+                                    <img class="image" src="Summary/balbier.jpg">
+                                    <div  onClick="parent.location='Summary/Balbier.html'" style="cursor:pointer">
+                                        Chris Balbier<br>
+                                        Chief Product Development
+                                        <br>
+                                        &emsp;
+                                    </div>
+                                </td>
+                                <td align="Center" class="hidden shift">
+                                    <br>
+                                    <img class="image" src="Summary/aldeia.jpg">
+                                    <div  onClick="parent.location='Summary/Aldeia.html'" style="cursor:pointer">
+                                        Luiz Aldeia<br>
+                                        Chief Design Engineer
+                                        <br>
+                                        &emsp;
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
                     </td>
                 </tr>
             </table>
