--- a/Directed Page.html
+++ b/Directed Page.html
@@ -38,7 +38,7 @@
             <br><br><br><br>
             <h1 class="hidden shift"><span>Who We Are</span></h1>
             <h2 class="hidden shift">
-                &emsp;&emsp;Radical Energy and Materials (REM)
+                &emsp;&emsp;Radical Energy and Materials
             </h2>
             <br>
             <table class="Name" align="center">
